--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -18,6 +18,7 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items:center;
+  overflow-x: hidden;
 }
 
 .sideNav a{
